test/type_errors/cases/schedule_tap_input_negative.ml
open Eta

let _ = Schedule.tap_input
